** RELEASE 1.1.0 (Pending) **

* Improved performance for large logs (Beaver#stream)
* Reduced memory usage (theoretically, anyway)
* Added Rails controller and action matchers, methods, etc.
* Various minor improvements

** RELEASE 1.0.0 (12/3/2011) **

* Added a response format parser and matcher (html, json, etc)
* Ability to pass simple DSL options directly through the command-line, making DSL files optional
* Ability to run multiple Beaver DSL files at once
* Bugfixes

** RELEASE 0.0.1 (09/24/2011) **

* Initial release