@@ -15,7 +15,7 @@ end
 
 options = {}
 o = OptionParser.new do |opts|
-  opts.banner = 'Usage: beaver [options] [dsl.rb...] /rails/production.log...'
+  opts.banner = 'Usage: beaver [options] [dsl.rb...] [/rails/production.log...]'
   opts.on('--path PATH', 'URL path, string or regex') { |path| options[:path] = Regexp.new(path, Regexp::IGNORECASE) }
   opts.on('--method METHOD', 'HTTP request method(s), e.g. get or post,put') { |methods| options[:method] = methods.split(',').map { |m| m.downcase.to_sym } }
   opts.on('--controller CONTROLLER', 'Rails controller name or regex') { |c| options[:controller] = Regexp.new(c, Regexp::IGNORECASE) }
@@ -33,30 +33,25 @@ o = OptionParser.new do |opts|
   opts.on('--yesterday', 'Alias to --on=-1') { options[:on] = Date.today-1 }
   opts.on('--regex REGEX', 'A regex string to be matched against the entire request') { |r| options[:match] = Regexp.new(r, Regexp::IGNORECASE) }
   opts.on('--print FORMAT', 'Formatted request string, e.g. "%{ip} went to %{path} passing %{params[:email]}"') { |hit| options[:print] = hit }
+  opts.on('--stdin', 'Read log content from stdin (for typing/pasting)') { options[:tty] = true }
   opts.on('-v', '--version', 'Show version') { puts "beaver #{Beaver::VERSION}"; exit }
 end
 o.parse!
 
-# Separate the beaver files and log files
+# Separate the beaver files and log files, then build the Beaver arguments
 beaver_files, log_files = ARGV.uniq.partition { |a| a =~ /\.rb$/ }
+args = beaver_files.any? ? [log_files, options].flatten : log_files
 
-# There have to be log files
-if log_files.empty?
-  puts o.banner
-  exit 1
-end
-
-# Run logs through the DSL file(s)
-if beaver_files.any?
-  STDERR.puts "WARNING --print is ignored when running Beaver DSL files" if options[:print]
-
-  beaver_files.map! { |b| File.open(b, &:read) }
-  Beaver.stream *[log_files, options].flatten do
+# Run Beaver
+Beaver.stream *args do
+  stdin!
+  tty! if options[:tty]
+  # Filter the logs through the DSL files
+  if beaver_files.any?
+    beaver_files.map! { |b| File.open(b, &:read) }
     beaver_files.each { |b| eval b }
-  end
-# Run logs through the CLI options
-else
-  Beaver.stream *log_files do
+  # Filter the logs through the CLI options
+  else
     hit :cli, options do
       puts options[:print] ? eval('"'+options[:print].gsub(/%\{/, '#{')+'"') : to_s << $/
     end
