@@ -1,5 +1,6 @@
 ** RELEASE 1.1.0 (Pending) **
 
+* Ability to parse log content from pipes and stdin
 * Improved performance for large logs (Beaver#stream)
 * Reduced memory usage (theoretically, anyway)
 * Added Rails controller and action matchers, methods, etc.
